# backend_practice

./: BackendPractice.postman_collection.json  README.md  pyproject.toml  sql_app.db
src/: .env  auth_handler.py  main.py  run.py
src/sql_app/: crud.py  fixtures.py  models.py  schemas.py
