[tool.poetry]
name = "backend_practice"
version = "0.1.0"
description = ""
authors = ["Leon Minasyan <leon-minasyan@yandex-team.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
